# robair-pyified

./: .conf.env  .dockerignore  .gitattributes  .gitignore  Makefile  README.md
.github/workflows/: publish.yml
assets/data/: 2017-09-07-16-57-44.bag
assets/map/: 2nd_floor.yaml
config/: config-laser.rviz  ros-node.launch  ros-phys.launch
docker/: Dockerfile  common-services.yml  config_check.py  config_launch.py  docker-compose-base.yml  docker-compose-gaze.yml  docker-compose-node.yml  docker-compose-phys.yml  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  generate_launch_config.py  launch_config.py  ros-node.launch
gazebo/robair_gazebo/: CMakeLists.txt  package.xml
gazebo/robair_gazebo/launch/: robair.launch  robair.rviz
gazebo/robair_gazebo/meshes/: hokuyo.dae
gazebo/robair_gazebo/urdf/: robair.gazebo  robair.xacro
gazebo/robair_gazebo/worlds/: robair.world
sources_cpp/follow_me/src/: detection_node.cpp
sources_cpp/tutorial_ros/src/: perform_clustering_node.cpp
sources_py/teleoperation/: CMakeLists.txt  package.xml
sources_py/teleoperation/src/: teleoperation_node.py
sources_py/tutorial_ros/: CMakeLists.txt  package.xml
sources_py/tutorial_ros/src/: laser_graphical_display_node.py  laser_text_display_node.py
