<?xml version="1.0"?>
<package>
    <name>robair_gazebo</name>
    <version>0.0.0</version>
    <description>follow me for the course "Robotics and IoT"</description>

    <maintainer email="olivier@todo.todo">olivier</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>xacro</run_depend>

    <export/>
</package>
