<package>
  <name>teleoperation</name>
  <version>0.0.0</version>
  <description>teleoperation</description>

  <maintainer email="my@email.com"> Omar </maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <export/>
</package>


